# dill-compiler

./: .gitignore  .merlin  Makefile  README.org  analyzer.ml  ast.ml  binop01.ll  build.sh  codegen.ml  codegen_qbe.ml  codegen_qbe.org  common.ml  datlang.ml  dillc.ml  dune  import01.ll  lexer.mll  parser.messages  parser.mly  pervasives.c  pervasives.ml  rdparser.ml  setpath.sh  slexer.ml  symtable1.ml  syntax.ml  triple.ll  types.ml
stdlib/: build_stdlib.sh  dill-stdio.c  dill-stdio.ll  fixnames.sh  gen_ll.sh  stdio.dms  stdio.ll
testsrc/: alias01.dl  alias01.dms  arith01.dl  array01.dl  array02.dl  array03.dl  array04.dl  array05.dl  arrayBoundsErr01.dl  arrayBoundsErr02.dl  arrayErr01.dl  arraymut01.dl  arraymut02.dl  arraymutErr01.dl  arrayret01.dl  arrayret02.dl  bBinop.dms  binop01.dl  binop01.dms  binopErr01.dl  bitwise.dl  byte01.dl  byteErr01.dl  case01.dl  case02.dl  case03.dl  case04.dl  caseErr02.dl  codegen00.dl  codegen01.dl  collatz.dl  collatz.dms  collatzMain.dl  collatzMax.dl  complex.dl  complexMut.dl  condexp01.dl  elsif01.dl  enum01.dl  equal00.dl  (+170 more)
