(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)

(executable
  (name dillc)
  (libraries
    llvm
    llvm.analysis
  )
  (modules :standard) ;\ codegen)
)

;; possible other libraries (from dune version of Kaleidoscope)
;   ctypes.foreign
;   llvm
;   llvm.analysis
;   llvm.executionengine
;   llvm.target
;   llvm.scalar_opts
;   menhirLib)
   
;; test setups from calc demo
; (rule
;   (with-stdout-to calc.out
;  (with-stdin-from calc.in
;    (run ./calc.exe)
;  ))
;)

;(rule
;  (alias test)
;  (action (diff calc.exp calc.out))
;)
