(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
  ; (flags --table -la 2) ; not ready for that!
)

;; The target for saving menhir's stdout to parser_messages.ml
;(rule
; (targets parser_messages.ml)
; (deps parser.messages parser.mly)
; (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(executable
  (name dillc)
  (libraries
    ctypes.foreign
    llvm
    llvm.analysis
    llvm.scalar_opts
    llvm.target
    llvm.executionengine
    llvm.linker
    llvm.all_backends
    qbe
    ;menhirLib
  )
  (modules :standard) ;\ codegen)
)

;; possible other libraries (from dune version of Kaleidoscope)
;   ctypes.foreign
;   llvm
;   llvm.analysis
;   llvm.executionengine
;   llvm.target
;   llvm.scalar_opts
;   menhirLib)
   
;; test setups from calc demo
; (rule
;   (with-stdout-to calc.out
;  (with-stdin-from calc.in
;    (run ./calc.exe)
;  ))
;)

;(rule
;  (alias test)
;  (action (diff calc.exp calc.out))
;)
